Apply feedback on PR from Niels